[workspace.package]
description = "Minimal TeX Equations Support."
authors = ["Myriad-Dreamin <camiyoru@gmail.com>", "OrangeX4 <orangex4@qq.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/OrangeX4/mitex"
repository = "https://github.com/OrangeX4/mitex"
rust-version = "1.74"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]

once_cell = "1"

fxhash = "0.2.1"
ecow = "0.2.0"
ena = "0.14.2"

logos = "0.13.0"
rowan = "0.15.15"

divan = "0.1.7"
insta = "1.34"

rkyv = "0.7.42"
serde = "1.0.188"
serde_json = "1.0.106"

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 3     # Optimize for speed
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic

[workspace.lints.clippy]
uninlined_format_args = "warn"
missing_docs = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"
missing_crate_level_docs = "warn"
