[workspace.package]
description = "Minimal TeX Equations Support."
authors = [
    "Myriad-Dreamin <camiyoru@gmail.com>",
    "OrangeX4 <orangex4@qq.com>",
    "mgt <mgt@oi-wiki.org>",
]
version = "0.2.4"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/mitex-rs/mitex"
repository = "https://github.com/mitex-rs/mitex"
rust-version = "1.74"

[workspace]
resolver = "2"
members = ["crates/*", "fuzz/*"]

[workspace.dependencies]

once_cell = "1"
anyhow = "1"

rustc-hash = "2"
ecow = "0.2.2"
ena = "0.14.3"

logos = "0.14.0"
rowan = "0.15.15"

which = "6"

mitex-spec = { version = "0.2.4", path = "crates/mitex-spec" }
mitex-glob = { version = "0.2.4", path = "crates/mitex-glob" }
mitex-lexer = { version = "0.2.4", path = "crates/mitex-lexer" }
mitex-parser = { version = "0.2.4", path = "crates/mitex-parser" }
mitex = { version = "0.2.4", path = "crates/mitex" }
mitex-spec-gen = { version = "0.2.4", path = "crates/mitex-spec-gen" }

clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_builder = { version = "4", features = ["string"] }
clap_complete = "4.4"
clap_complete_fig = "4.4"
clap_mangen = { version = "0.2.15" }
vergen = { version = "8.2.5", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }

divan = "0.1.14"
insta = "1.39"

rkyv = "0.7.42"
serde = "1.0.188"
serde_json = "1.0.106"

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 3     # Optimize for speed
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
uninlined_format_args = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"
