[package]
name = "mitex-cli"
description = "CLI for MiTeX."
categories = ["compilers", "command-line-utilities"]
keywords = ["cli", "language", "compiler", "latex", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "mitex"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]

mitex-spec = { path = "../mitex-spec" }

serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
