[package]
name = "mitex-cli"
description = "CLI for MiTeX."
categories = ["compilers", "command-line-utilities"]
keywords = ["cli", "language", "compiler", "latex", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "mitex"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]

mitex-spec-gen.workspace = true
mitex-spec.workspace = true
mitex-parser.workspace = true
mitex.workspace = true

clap.workspace = true
clap_builder.workspace = true
clap_complete.workspace = true
clap_complete_fig.workspace = true
clap_mangen.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true

[lints]
workspace = true

[features]
prebuilt-spec = ["mitex-spec-gen/prebuilt"]
generate-spec = ["mitex-spec-gen/generate"]
