[package]
name = "mitex-evaluator"
description = "Macro Evaluator for MiTeX"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

logos = "0.13.0"
mitex-lexer = { path = "../mitex-lexer" }
mitex-spec = { path = "../mitex-spec" }
