[package]
name = "mitex-lexer"
description = "Lexer for MiTeX"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

mitex-spec = { path = "../mitex-spec" }

logos.workspace = true
ena.workspace = true
ecow.workspace = true
fxhash.workspace = true

[dev-dependencies]
once_cell = "1"
insta = "1.34"
