[package]
name = "mitex-parser"
description = "Parser for MiTeX"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "simple"
harness = false

[dependencies]

logos = "0.13.0"
rowan = "0.15.15"
mitex-lexer = { path = "../mitex-lexer" }
mitex-glob = { path = "../mitex-glob" }
mitex-spec = { path = "../mitex-spec" }

[dev-dependencies]
once_cell = "1"
insta = "1.34"
divan = "0.1.7"
