[package]
name = "mitex-parser"
description = "Parser for MiTeX"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "simple"
harness = false

[dependencies]

mitex-glob = { path = "../mitex-glob" }
mitex-lexer = { path = "../mitex-lexer" }
mitex-spec = { path = "../mitex-spec" }

rowan.workspace = true

[dev-dependencies]
once_cell = "1"
insta = "1.34"
divan = "0.1.7"
