[package]
name = "mitex-spec"
description = "Specification Library for MiTeX"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bench]]
name = "constructions"
harness = false

[dependencies]
rkyv = { version = "0.7.42", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"

[features]

rkyv = ["dep:rkyv", "rkyv/alloc", "rkyv/archive_le"]
rkyv-validation = ["dep:rkyv", "rkyv/validation"]
default = ["rkyv", "rkyv-validation"]

[dev-dependencies]
once_cell = "1"
divan = "0.1.7"
