[package]
name = "mitex-typst"
description = "Typst Plugin which uses mitex"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
mitex = { path = "../mitex" }
mitex-spec = { path = "../mitex-spec" }
serde = "1.0.188"
serde_json = "1.0.106"


[features]
rkyv = ["mitex-spec/rkyv", "mitex-spec/rkyv-validation"]
