[package]
name = "mitex-wasm"
description = "Wasm module which uses mitex, running in browsers and Typst"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]

mitex = { path = "../mitex" }
mitex-spec = { path = "../mitex-spec" }

serde.workspace = true
serde_json.workspace = true

wasm-bindgen = { version = "0.2.74", optional = true }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol", optional = true }

[features]
rkyv = ["mitex-spec/rkyv", "mitex-spec/rkyv-validation"]
web = ["wasm-bindgen"]
typst-plugin = ["wasm-minimal-protocol"]

default = ["rkyv"]

[lints]
workspace = true
