[package]
name = "mitex-wasm"
description = "Wasm module which uses mitex, running in browsers and Typst"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]

mitex.workspace = true
mitex-spec.workspace = true

serde.workspace = true
serde_json.workspace = true

wasm-bindgen = { version = "0.2.92", optional = true }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol", optional = true }

[features]
rkyv = ["mitex-spec/rkyv", "mitex-spec/rkyv-validation"]
web = ["wasm-bindgen"]
typst-plugin = ["wasm-minimal-protocol"]
spec-api = []

default = ["rkyv"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']

[lints]
workspace = true
