[package]
name = "mitex"
description = "MiTeX is a TeX2Typst converter."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bench]]
name = "convert_large_projects"
harness = false

[dependencies]

mitex-parser = { path = "../mitex-parser" }
mitex-spec-gen = { path = "../mitex-spec-gen" }
rowan.workspace = true
bitflags = "2.4.1"

[dev-dependencies]
insta.workspace = true
divan.workspace = true
serde.workspace = true
serde_json.workspace = true

# todo: add lints in when we resolves all the warnings
# [lints]
# workspace = true
